# SpotifyDashTool

./: .env  .gitignore  LICENSE  README.md
backend/: index.js  mcp-bridge.js  package.json
mcp/: config.py  pyproject.toml  server.py  settings.py
public/: index.html  script.js
