[project]
name = "spotify-mcp-sorter"
version = "0.1.0"
description = "MCP server for Spotify — playback control + playlist management ported from SpotifySortTool"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]",
    "spotipy",
    "requests",
    "python-dotenv",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
